--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=initial-scale=1.0">
     <title>PROMISE-CALLBACKhell-api</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <style>
-
-    </style>
+   
+   <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -34,73 +32,12 @@
     <br>
 
     <!--heading-->
-    <h1 style="text-align: center;">Smartphones</h1><br>
+    <h1 style="text-align: center;">All Items</h1><br>
 
     <!--product display-->
-    <div class="products d-flex flex-wrap ms-5 gap-3">
+   <div class="container d-flex justify-content-evenly flex-wrap row gap-1 ">
 
-        <!--card1-->
-        <div class="card card1 " style="width: 15rem">
-            <img src="..." class="card-img-top img1">
-            <div class="card-body  bg-body-secondary">
-                <p class="card-text txt1"></p>
-                <p class="card-text txt2"></p>
-                <p class="card-text txt3"></p>
-                <p class="card-text txt4"></p>
-                <p class="card-text txt5"></p>
-            </div>
-        </div>
-
-        <!--card2-->
-        <div class="card card2" style="width: 15rem;">
-            <img src="..." class="card-img-top img2 ">
-            <div class="card-body  bg-body-secondary">
-                <p class="card-text text1"></p>
-                <p class="card-text text2"></p>
-                <p class="card-text text3"></p>
-                <p class="card-text text4"></p>
-                <p class="card-text text5"></p>
-            </div>
-        </div>
-
-        <!--card3-->
-        <div class="card card2 " style="width: 15rem;">
-            <img src="..." class="card-img-top img3 " >
-            <div class="card-body  bg-body-secondary">
-                <p class="card-text xt1"></p>
-                <p class="card-text xt2"></p>
-                <p class="card-text xt3"></p>
-                <p class="card-text xt4"></p>
-                <p class="card-text xt5"></p>
-            </div>
-        </div>
-
-        <!--card4-->
-        <div class="card card2" style="width: 15rem;">
-            <img src="..." class="card-img-top img4" style="width:130px">
-            <div class="card-body  bg-body-secondary">
-                <p class="card-text t1"></p>
-                <p class="card-text t2"></p>
-                <p class="card-text t3"></p>
-                <p class="card-text t4"></p>
-                <p class="card-text t5"></p>
-            </div>
-        </div>
-
-        <!--card5-->
-        <div class="card card2 " style="width: 15rem;">
-            <img src="..." class="card-img-top img5">
-            <div class="card-body bg-body-secondary">
-                <p class="card-text te1"></p>
-                <p class="card-text te2"></p>
-                <p class="card-text te3"></p>
-                <p class="card-text te4"></p>
-                <p class="card-text te5"></p>
-            </div>
-        </div>
-
-    </div>
-
+   </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
